hphp/test/slow/yield/dispose.php.expectf

Fatal error: 'yield' is not allowed in constructor, destructor, or magic methods in %s/dispose.php on line 5
